# Book-Reader

./: CMakeLists.txt  build.bat  full_build.bat  run.bat
src/: dynamicheader.cpp  dynamicheader.h  main.cpp
